書籍取得からUTまでの実装
